react-app/replicas.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app-container
          image: localhost:5000/treeleaf:latest
          ports:
            - containerPort: 80
